Fixing timepicker covering fields and nil time bug.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -660,6 +660,7 @@ table {
 
 #timePkr {
   overflow: hidden;
+  margin-top: 35px;
 }
 
 #timePkr table {
